<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spatullr</string>
    <string name="name">Application Name</string>
    <string name="build_version">Build Version</string>
    <string name="app_version">Version 2.1.0</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Pongodev</string>
    <string name="copyright">Copyright</string>
    <string name="app_copyright">Copyright 2014 pongodev. All rights reserved</string>
    <string name="sharing">Sharing</string>
    <string name="tell_friend">Tell a Friend</string>
    <string name="tell_friend_summary">Tell your friend about this app</string>
    <string name="rate_app">Rate</string>
    <string name="rate_app_summary">Rate this app if you think it is awesome</string>
    <string name="review">Review</string>
    <string name="review_app_summary">Tell us your feedback about our app</string>
    <string name="app_subtitle">Awesome App</string>
    <string name="cook_time">COOK TIME</string>
    <string name="minutes">MIN</string>
    <string name="serve_for">FOR</string>
    <string name="persons">PERSONS</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="share_to">Share to</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="search_result">Search Result</string>
    <string name="search_hint">Type Recipe Name</string>
    <string name="data_exist">Recipe has already added to favorites</string>
    <string name="success_add_data">Recipe successfully added to favorites</string>
    <string name="subject">Hi, i just try new recipe on Recipes App for Android</string>
    <string name="message">You can download Recipes App for Android at </string>
    <string name="intro_message">Hi, i just try new recipe, </string>
    <string name="extra_message">. You can also try this recipe by downloading </string>
    <string name="here">here:</string>
    <string name="google_play_url">https://play.google.com/store/apps/details?id=your.package.name</string>
    <string name="banner_ad_unit_id">ca-app-pub-9916016100298827/2631172790</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-9916016100298827/2158779599</string>
    <string name="summary">SUMMARY</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="steps">STEPS</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="confirm_message">remove recipes from favorites?</string>
    <string name="remove">Remove</string>
    <string name="success_remove">Successfully removed recipe from favorites</string>
    <string name="no_recipes">No recipes</string>


    <string-array name="detail_pagers">
        <item>SUMMARY</item>
        <item>INGREDIENTS</item>
        <item>DIRECTIONS</item>
    </string-array>


    <!-- Setting preferences string -->
    <string name="pref_key_about">pref_key_about</string>
    <string name="pref_key_app_name">pref_key_app_name</string>
    <string name="pref_key_developer">pref_key_developer</string>
    <string name="pref_key_app_version">pref_key_app_version</string>
    <string name="pref_key_copyright">pref_key_copyright</string>
    <string name="pref_key_sharing">pref_key_sharing</string>
    <string name="pref_key_tell_friend">pref_key_tell_friend</string>
    <string name="pref_key_rate_app">pref_key_rate_app</string>
    <string name="pref_key_review">pref_key_review</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity_home2">ActivityHome2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

</resources>