<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/about"
        android:key="@string/pref_key_about">
        <Preference
            android:key="@string/pref_key_app_name"
            android:title="@string/name"
            android:summary="@string/app_name" />
        <Preference
            android:key="@string/pref_key_developer"
            android:title="@string/developer"
            android:summary="@string/developer_name" />
        <Preference
            android:key="@string/pref_key_app_version"
            android:title="@string/build_version"
            android:summary="@string/app_version" />
        <Preference
            android:key="@string/pref_key_copyright"
            android:title="@string/copyright"
            android:summary="@string/app_copyright" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/sharing"
        android:key="@string/pref_key_sharing">
        <Preference
            android:key="@string/pref_key_tell_friend"
            android:title="@string/tell_friend"
            android:summary="@string/tell_friend_summary" />
        <Preference
            android:key="@string/pref_key_rate_app"
            android:title="@string/rate_app"
            android:summary="@string/rate_app_summary" />
        <Preference
            android:key="@string/pref_key_review"
            android:title="@string/review"
            android:summary="@string/review_app_summary" />
    </PreferenceCategory>



</PreferenceScreen>