<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/detail_background_color">


    <FrameLayout
        android:id="@+id/lytToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imgRecipe"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="@dimen/margin_image_bottom"/>

        <com.andexert.library.RippleView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="@dimen/padding_content"
            app:rv_type="doubleRipple"
            app:rv_rippleDuration="50">
        <ImageButton
            android:id="@+id/btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_white_36dp"
            android:background="@drawable/circle_button"
            android:visibility="gone"/>
        </com.andexert.library.RippleView>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:title=""
            android:background="@android:color/transparent"
            app:theme="@style/ThemeSpatullr"
            app:popupTheme="@style/Theme.AppCompat">

        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/lytTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:padding="@dimen/padding_content"
            android:layout_marginBottom="@dimen/margin_title_bottom">
            <ImageView
                android:id="@+id/imgBlank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_assignment_turned_in_grey600_36dp"
                android:layout_alignParentLeft="true"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/txtRecipeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_toRightOf="@+id/imgBlank"
                android:paddingLeft="@dimen/padding_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/subtitle_color"
                android:id="@+id/txtCategory"
                android:layout_toRightOf="@+id/imgBlank"
                android:layout_below="@+id/txtRecipeName"
                android:paddingLeft="@dimen/padding_content"/>
        </RelativeLayout>
    </FrameLayout>

    <ProgressBar
        android:id="@+id/prgLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Inverse"
        android:layout_centerInParent="true"/>

    <ScrollView
        android:id="@+id/sclDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lytToolbar"
        android:layout_above="@+id/adView"
        android:padding="@dimen/padding_content"
        android:visibility="gone">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/lytInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">
                <ImageView
                    android:id="@+id/imgInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_alarm_grey600_36dp"
                    android:layout_alignParentLeft="true"/>
                <TextView
                    android:id="@+id/txtInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_toRightOf="@+id/imgInfo"
                    android:paddingLeft="@dimen/padding_content"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/lytSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lytInfo"
                android:layout_marginTop="@dimen/padding_content">
                <ImageView
                    android:id="@+id/imgSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_description_grey600_36dp"
                    android:layout_alignParentLeft="true"/>
                <TextView
                    android:id="@+id/txtLabelSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/summary"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_toRightOf="@+id/imgSummary"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:paddingLeft="@dimen/padding_content"/>
                <TextView
                    android:id="@+id/txtSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtLabelSummary"
                    android:textColor="@color/text_content_color"
                    android:layout_toRightOf="@+id/imgSummary"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:lineSpacingExtra="@dimen/line_spacing"
                    android:paddingLeft="@dimen/padding_content"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/lytIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lytSummary"
                android:layout_marginTop="@dimen/padding_content">
                <ImageView
                    android:id="@+id/imgIngredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_assignment_grey600_36dp"
                    android:layout_alignParentLeft="true"/>
                <TextView
                    android:id="@+id/txtLabelIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_toRightOf="@+id/imgIngredients"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:paddingLeft="@dimen/padding_content"/>
                <WebView
                    android:id="@+id/webIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtLabelIngredients"
                    android:layout_toRightOf="@+id/imgIngredients"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:lineSpacingExtra="@dimen/line_spacing"
                    android:paddingLeft="@dimen/padding_content"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/lytSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lytIngredients"
                android:layout_marginTop="@dimen/padding_content">
                <ImageView
                    android:id="@+id/imgSteps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_assignment_turned_in_grey600_36dp"
                    android:layout_alignParentLeft="true"/>
                <TextView
                    android:id="@+id/txtLabelSteps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/steps"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_toRightOf="@+id/imgSteps"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:paddingLeft="@dimen/padding_content"/>
                <WebView
                    android:id="@+id/webSteps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtLabelSteps"
                    android:layout_toRightOf="@+id/imgSteps"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:lineSpacingExtra="@dimen/line_spacing"
                    android:paddingLeft="@dimen/padding_content"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_alignParentBottom="true">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>



